@@ -1,3 +1,14 @@
+2008-10-10  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tk.h:		Bump to 8.5.5 for release.
+	* library/tk.tcl:
+	* unix/configure.in:
+	* unix/tk.spec:
+	* win/configure.in:
+
+	* unix/configure:	autoconf-2.59
+	* win/configure:
+
 2008-10-09  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tkListbox.c:	Make literal return values consistent with
